Move FileManager instance into Project